@@ -347,6 +347,8 @@ Trunk (Unreleased)
    FALCON-681 delete duplicate feed retention test from falcon regression (SamarthG)
 
   BUG FIXES
+   FALCON-1277 Fix SearchApiTest according to api changes (Paul Isaychuk via Ruslan Ostafiychuk)
+
    FALCON-1275 PrismFeedUpdateTest is using root directory (Raghav Kumar Gautam via Ruslan Ostafiychuk)
 
    FALCON-1274 PrismProcessScheduleTest is using root directory (Raghav Kumar Gautam via Ruslan Ostafiychuk)
